[gd_scene load_steps=5 format=3 uid="uid://c5t3gf4e1vejt"]

[ext_resource type="Script" uid="uid://f5oxmywopbom" path="res://scripts/enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://dqr6d1gvmgy2q" path="res://assets/evil_face.png" id="1_7p1mj"]
[ext_resource type="PackedScene" uid="uid://cj7wt2mp30j3l" path="res://scenes/kill_zone.tscn" id="2_md0e3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 14.0051

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4ra3w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_7p1mj")

[node name="Killzone" parent="." instance=ExtResource("2_md0e3")]
position = Vector2(0, 14.378)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -14.378)
shape = SubResource("CircleShape2D_md0e3")

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -17)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 17)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-17, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(17, 0)
